--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # CMakeLists.txt
 #
-#  Created on: 05/mag/2014
+#  Created on: 06/giu/2014
 #      Author: Luca Muratore (luca.muratore@iit.it)
 #
 
